--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Productos REST Service",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "test": "mocha test/index.js"
   },
   "repository": {
     "type": "git",
